fixed homepage alignment
-home and destination mobile pages are complete as well as mobile nav bar

--- a/space-tourism-website-challange/src/index.css
+++ b/space-tourism-website-challange/src/index.css
@@ -525,9 +525,10 @@ header {
   .home-text {
     width: 100vw;
     margin: 0;
-    transform: scale(0.8);
+    transform: scale(0.9);
     float: none;
   }
+
   .home-text h5,
   h1,
   p {
@@ -535,9 +536,23 @@ header {
     width: 100vw;
   }
 
+  .home-text h5 {
+    margin-top: 2rem;
+    font-size: 16px;
+  }
+
+  .home-text h1 {
+    font-size: 80px;
+  }
+
+  .home p {
+    font-size: 15px;
+  }
+
   .home-btn {
     float: none;
-    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
     transform: scale(0.8);
   }
 
